--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -42,13 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Load words from IWSLT"
+    "import torch.nn as nn\n",
+    "\n",
+    "class S2SModel(nn.Module):\n",
+    "    def __init__(self, encoder, decoder):\n",
+    "        super(S2SModel, self).__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "\n",
+    "    def forward(self, src, tgt):\n",
+    "        memory = self.encoder(src)\n",
+    "        output = self.decoder(tgt, memory)\n",
+    "        return output"
    ]
   },
   {
@@ -64,33 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-ed294c37b8c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Encoder Model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mTransformerEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     def __init__(self, num_layers, hidden_size,\n\u001b[1;32m      4\u001b[0m                  dropout, embeddings):\n\u001b[1;32m      5\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTransformerEncoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Encoder Model\n",
-    "\n",
     "class TransformerEncoder(nn.Module):\n",
-    "    def __init__(self, num_layers, hidden_size,\n",
-    "                 dropout, embeddings):\n",
+    "    def __init__(self, num_layers, encoder_layer, hidden_size):\n",
     "        super(TransformerEncoder, self).__init__()\n",
     "        self.layers = nn.ModuleList(\n",
-    "            [TransformerEncoderLayer(hidden_size, dropout)\n",
-    "             for i in range(num_layers)])\n",
+    "            [encoder_layer.clone() for i in range(num_layers)])\n",
     "        self.norm = onmt.modules.LayerNorm(hidden_size)\n",
     "\n",
     "    def forward(self, emb, mask):\n",
@@ -109,17 +105,10 @@
    "outputs": [],
    "source": [
     "class TransformerEncoderLayer(nn.Module):\n",
-    "    def __init__(self, size, dropout,\n",
-    "                 head_count=8, hidden_size=2048):\n",
+    "    def __init__(self, size, dropout, self_attn, feed_forward):\n",
     "        super(TransformerEncoderLayer, self).__init__()\n",
-    "        self.self_attn = \\\n",
-    "            MultiHeadedAttention(head_count, \n",
-    "                                 size,\n",
-    "                                 dropout=dropout)\n",
-    "        self.feed_forward = \\\n",
-    "            PositionwiseFeedForward(size,\n",
-    "                                    hidden_size,\n",
-    "                                    dropout)\n",
+    "        self.self_attn = self_attn\n",
+    "        self.feed_forward = feed_forward\n",
     "        self.norm = onmt.modules.LayerNorm(size)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
@@ -152,26 +141,15 @@
    "source": [
     "# Decoder Model\n",
     "class TransformerDecoderLayer(nn.Module):\n",
-    "    def __init__(self, size, dropout,\n",
-    "                 head_count=8, hidden_size=2048):\n",
+    "    def __init__(self, size, dropout, self_attn, \n",
+    "                 src_attn, feed_forward):\n",
     "        super(TransformerDecoderLayer, self).__init__()\n",
-    "        self.self_attn = \\\n",
-    "            MultiHeadedAttention(head_count, \n",
-    "                                 size, \n",
-    "                                 dropout=dropout)\n",
-    "        self.context_attn = \\\n",
-    "            MultiHeadedAttention(head_count, \n",
-    "                                size, \n",
-    "                                dropout=dropout)\n",
-    "        self.feed_forward = \\\n",
-    "            PositionwiseFeedForward(size,\n",
-    "                                    hidden_size,\n",
-    "                                    dropout)\n",
-    "        self.norm_1 = onmt.modules.LayerNorm(size)\n",
-    "        self.norm_2 = onmt.modules.LayerNorm(size)\n",
-    "        self.norm_3 = onmt.modules.LayerNorm(size)\n",
-    "        self.dropout = dropout\n",
-    "        self.drop = nn.Dropout(dropout)\n",
+    "        self.self_attn = self_attn\n",
+    "        self.context_attn = src_attn\n",
+    "        self.feed_forward = feed_forward\n",
+    "        self.norm = [LayerNorm(size) \n",
+    "                     for i in range(3)]\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "        mask = self._get_attn_subsequent_mask(MAX_SIZE)\n",
     "        self.register_buffer('mask', mask)\n",
     "\n",
@@ -181,24 +159,27 @@
     "        dec_mask = torch.gt(tgt_pad_mask +\n",
     "                            self.mask[:, :tgt_pad_mask.size(1),\n",
     "                                      :tgt_pad_mask.size(1)], 0)\n",
-    "        input_norm = self.norm_1(inputs)\n",
+    "        input_norm = self.norm[0](inputs)\n",
     "        all_input = input_norm\n",
     "        if previous_input is not None:\n",
     "            all_input = torch.cat((previous_input, input_norm), dim=1)\n",
     "            dec_mask = None\n",
     "\n",
-    "\n",
     "        # Sublayer 1\n",
-    "        query = self.self_attn(all_input, all_input, input_norm,\n",
-    "                                     mask=dec_mask)\n",
+    "        query = self.self_attn(all_input, \n",
+    "                               all_input, \n",
+    "                               input_norm,\n",
+    "                               mask=dec_mask)\n",
     "        query = self.drop(query) + inputs\n",
-    "        query_norm = self.norm_2(query)\n",
+    "        query_norm = self.norm[1](query)\n",
     "\n",
     "        # Sublayer 2\n",
-    "        mid = self.context_attn(memory_bank, memory_bank, query_norm,\n",
-    "                                      mask=src_pad_mask)\n",
+    "        mid = self.context_attn(memory_bank, \n",
+    "                                memory_bank, \n",
+    "                                query_norm,\n",
+    "                                mask=src_pad_mask)\n",
     "\n",
-    "        mid_norm = self.drop(mid) + query\n",
+    "        mid_norm = self.norm[2](self.drop(mid) + query)\n",
     "        # Sublayer 3\n",
     "        output = self.feed_forward(mid_norm)\n",
     "        return output + mid\n",
@@ -234,49 +215,16 @@
     "        self.transformer_layers = nn.ModuleList(\n",
     "            [TransformerDecoderLayer(hidden_size, dropout)\n",
     "             for _ in range(num_layers)])\n",
-    "\n",
-    "        # TransformerDecoder has its own attention mechanism.\n",
-    "        # Set up a separated copy attention layer, if needed.\n",
-    "        self._copy = False\n",
-    "        if copy_attn:\n",
-    "            self.copy_attn = onmt.modules.GlobalAttention(\n",
-    "                hidden_size, attn_type=attn_type)\n",
-    "            self._copy = True\n",
     "        self.layer_norm = onmt.modules.LayerNorm(hidden_size)\n",
     "\n",
     "    def forward(self, tgt, memory_bank, state, memory_lengths=None):\n",
-    "        \"\"\"\n",
-    "        See :obj:`onmt.modules.RNNDecoderBase.forward()`\n",
-    "        \"\"\"\n",
-    "        # CHECKS\n",
-    "        assert isinstance(state, TransformerDecoderState)\n",
-    "        tgt_len, tgt_batch, _ = tgt.size()\n",
-    "        memory_len, memory_batch, _ = memory_bank.size()\n",
-    "        aeq(tgt_batch, memory_batch)\n",
-    "\n",
-    "        src = state.src\n",
-    "        src_words = src[:, :, 0].transpose(0, 1)\n",
-    "        tgt_words = tgt[:, :, 0].transpose(0, 1)\n",
-    "        src_batch, src_len = src_words.size()\n",
-    "        tgt_batch, tgt_len = tgt_words.size()\n",
-    "        aeq(tgt_batch, memory_batch, src_batch, tgt_batch)\n",
-    "        aeq(memory_len, src_len)\n",
-    "\n",
-    "        if state.previous_input is not None:\n",
-    "            tgt = torch.cat([state.previous_input, tgt], 0)\n",
-    "        # END CHECKS\n",
-    "\n",
     "        # Initialize return variables.\n",
     "        outputs = []\n",
-    "        attns = {\"std\": []}\n",
-    "        if self._copy:\n",
-    "            attns[\"copy\"] = []\n",
     "\n",
     "        # Run the forward pass of the TransformerDecoder.\n",
     "        emb = self.embeddings(tgt)\n",
     "        if state.previous_input is not None:\n",
     "            emb = emb[state.previous_input.size(0):, ]\n",
-    "        assert emb.dim() == 3  # len x batch x embedding_dim\n",
     "\n",
     "        output = emb.transpose(0, 1).contiguous()\n",
     "        src_memory_bank = memory_bank.transpose(0, 1).contiguous()\n",
@@ -304,14 +252,7 @@
     "        # Process the result and update the attentions.\n",
     "        outputs = output.transpose(0, 1).contiguous()\n",
     "        attn = attn.transpose(0, 1).contiguous()\n",
-    "\n",
-    "        attns[\"std\"] = attn\n",
-    "        if self._copy:\n",
-    "            attns[\"copy\"] = attn\n",
-    "\n",
-    "        # Update the state.\n",
-    "        state = state.update_state(tgt, saved_inputs)\n",
-    "        return outputs, state, attns\n",
+    "        return outputs\n",
     "\n",
     "    def init_decoder_state(self, src, memory_bank, enc_hidden):\n",
     "        return TransformerDecoderState(src)\n"
@@ -365,7 +306,7 @@
     "        # 3) Apply attention dropout and compute context vectors.\n",
     "        attn = self.sm(scores)\n",
     "        drop_attn = self.dropout(attn)\n",
-    "        context = unshape(torch.matmul(drop_attn, value_up))\n"
+    "        context = unshape(torch.matmul(drop_attn, value_up))"
    ]
   },
   {
@@ -611,6 +552,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Load words from IWSLT\n",
+    "from torchtext import data\n",
+    "from torchtext import datasets\n",
+    "\n",
+    "import spacy\n",
+    "spacy_de = spacy.load('de')\n",
+    "spacy_en = spacy.load('en')\n",
+    "\n",
+    "def tokenize_de(text):\n",
+    "    return [tok.text for tok in spacy_de.tokenizer(text)]\n",
+    "\n",
+    "def tokenize_en(text):\n",
+    "    return [tok.text for tok in spacy_en.tokenizer(text)]\n",
+    "\n",
+    "BOS_WORD = '<s>'\n",
+    "EOS_WORD = '</s>'\n",
+    "SRC = data.Field(tokenize=tokenize_de)\n",
+    "TGT = data.Field(tokenize=tokenize_en, init_token = BOS_WORD, eos_token = EOS_WORD) # only target needs BOS/EOS\n",
+    "\n",
+    "MAX_LEN = 20\n",
+    "train, val, test = datasets.IWSLT.splits(exts=('.de', '.en'), fields=(DE, EN), \n",
+    "                                         filter_pred=lambda x: len(vars(x)['src']) <= MAX_LEN and \n",
+    "                                         len(vars(x)['trg']) <= MAX_LEN)\n",
+    "MIN_FREQ = 5\n",
+    "SRC.build_vocab(train.src, min_freq=MIN_FREQ)\n",
+    "TGT.build_vocab(train.trg, min_freq=MIN_FREQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": true
@@ -657,15 +634,6 @@
     "$$                                                                                                                                                                                             \n",
     "This corresponds to increasing the learning rate linearly for the first $warmup\\_steps$ training steps, and decreasing it thereafter proportionally to the inverse square root of the step number.  We used $warmup\\_steps=4000$.                            "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -724,51 +692,28 @@
     "class LabelSmoothing(nn.Criterion):\n",
     "    def __init__(self, generator, tgt_vocab, normalization=\"sents\",\n",
     "                 label_smoothing=0.0):\n",
-    "        super(NMTLossCompute, self).__init__(generator, tgt_vocab)\n",
-    "        assert (label_smoothing >= 0.0 and label_smoothing <= 1.0)\n",
-    "        if label_smoothing > 0:\n",
-    "            # When label smoothing is turned on,\n",
-    "            # KL-divergence between q_{smoothed ground truth prob.}(w)\n",
-    "            # and p_{prob. computed by model}(w) is minimized.\n",
-    "            # If label smoothing value is set to zero, the loss\n",
-    "            # is equivalent to NLLLoss or CrossEntropyLoss.\n",
-    "            # All non-true labels are uniformly set to low-confidence.\n",
-    "            self.criterion = nn.KLDivLoss(size_average=False)\n",
-    "            one_hot = torch.randn(1, len(tgt_vocab))\n",
-    "            one_hot.fill_(label_smoothing / (len(tgt_vocab) - 2))\n",
-    "            one_hot[0][self.padding_idx] = 0\n",
-    "            self.register_buffer('one_hot', one_hot)\n",
-    "        else:\n",
-    "            weight = torch.ones(len(tgt_vocab))\n",
-    "            weight[self.padding_idx] = 0\n",
-    "            self.criterion = nn.NLLLoss(weight, size_average=False)\n",
+    "        super(LabelSmoothing, self).__init__(generator, tgt_vocab)\n",
+    "        self.criterion = nn.KLDivLoss(size_average=False)\n",
+    "        one_hot = torch.randn(1, len(tgt_vocab))\n",
+    "        one_hot.fill_(label_smoothing / (len(tgt_vocab) - 2))\n",
+    "        one_hot[0][self.padding_idx] = 0\n",
+    "        self.register_buffer('one_hot', one_hot)\n",
     "        self.confidence = 1.0 - label_smoothing\n",
     "\n",
     "    def forward(self, batch, output, target):\n",
     "        scores = self.generator(self._bottle(output))\n",
-    "\n",
     "        gtruth = target.view(-1)\n",
-    "        if self.confidence < 1:\n",
-    "            tdata = gtruth.data\n",
-    "            mask = torch.nonzero(tdata.eq(self.padding_idx)).squeeze()\n",
-    "            log_likelihood = torch.gather(scores.data, 1, tdata.unsqueeze(1))\n",
-    "            tmp_ = self.one_hot.repeat(gtruth.size(0), 1)\n",
-    "            tmp_.scatter_(1, tdata.unsqueeze(1), self.confidence)\n",
-    "            if mask.dim() > 0:\n",
-    "                log_likelihood.index_fill_(0, mask, 0)\n",
-    "                tmp_.index_fill_(0, mask, 0)\n",
-    "            gtruth = Variable(tmp_, requires_grad=False)\n",
+    "        tdata = gtruth.data\n",
+    "        mask = torch.nonzero(tdata.eq(self.padding_idx)).squeeze()\n",
+    "        log_likelihood = torch.gather(scores.data, 1, tdata.unsqueeze(1))\n",
+    "        tmp_ = self.one_hot.repeat(gtruth.size(0), 1)\n",
+    "        tmp_.scatter_(1, tdata.unsqueeze(1), self.confidence)\n",
+    "        if mask.dim() > 0:\n",
+    "            log_likelihood.index_fill_(0, mask, 0)\n",
+    "            tmp_.index_fill_(0, mask, 0)\n",
+    "        gtruth = Variable(tmp_, requires_grad=False)\n",
     "        loss = self.criterion(scores, gtruth)\n",
-    "        if self.confidence < 1:\n",
-    "            # Default: report smoothed ppl.\n",
-    "            # loss_data = -log_likelihood.sum(0)\n",
-    "            loss_data = loss.data.clone()\n",
-    "        else:\n",
-    "            loss_data = loss.data.clone()\n",
-    "\n",
-    "        stats = self._stats(loss_data, scores.data, target.view(-1).data)\n",
-    "\n",
-    "        return loss, stats\n"
+    "        return loss"
    ]
   }
  ],
