--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
     "                                                                                                                                                                                                                                                                                                                     \n",
     "### Encoder: \n",
     "\n",
-    "The encoder is composed of a stack of $N=6$ identical layers. Each layer has two sub-layers. The first is a multi-head self-attention mechanism, and the second is a simple, position-wise fully connected feed-forward network.   We employ a residual connection \\citep{he2016deep} around each of the two sub-layers, followed by layer normalization \\cite{layernorm2016}.  That is, the output of each sub-layer is $\\mathrm{LayerNorm}(x + \\mathrm{Sublayer}(x))$, where $\\mathrm{Sublayer}(x)$ is the function implemented by the sub-layer itself.  To facilitate these residual connections, all sub-layers in the model, as well as the embedding layers, produce outputs of dimension $d_{\\text{model}}=512$.   "
+    "The encoder is composed of a stack of $N=6$ identical layers. "
    ]
   },
   {
@@ -99,6 +99,38 @@
    "source": [
     "def clones(module, times):\n",
     "    return nn.ModuleList([module.clone() for _ in range(times)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, layer, num_layers):\n",
+    "        super(Encoder, self).__init__()\n",
+    "        self.layers = clones(layer, num_layers)\n",
+    "\n",
+    "    def forward(self, inputs, mask):\n",
+    "        out = inputs\n",
+    "        for layer in self.layers:\n",
+    "            out = layer(out, mask)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "We employ a residual connection \\citep{he2016deep} around each of the two sub-layers, followed by layer normalization \\cite{layernorm2016}.  That is, the output of each sub-layer is $\\mathrm{LayerNorm}(x + \\mathrm{Sublayer}(x))$, where $\\mathrm{Sublayer}(x)$ is the function implemented by the sub-layer itself.  To facilitate these residual connections, all sub-layers in the model, as well as the embedding layers, produce outputs of dimension $d_{\\text{model}}=512$.   "
    ]
   },
   {
@@ -141,6 +173,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each layer has two sub-layers. The first is a multi-head self-attention mechanism, and the second is a simple, position-wise fully connected feed-forward network."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
@@ -167,26 +206,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Encoder(nn.Module):\n",
-    "    def __init__(self, layer, num_layers):\n",
-    "        super(Encoder, self).__init__()\n",
-    "        self.layers = clones(layer, num_layers)\n",
-    "\n",
-    "    def forward(self, inputs, mask):\n",
-    "        out = inputs\n",
-    "        for layer in self.layers:\n",
-    "            out = layer(out, mask)\n",
-    "        return out"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -197,62 +216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Decoder Model\n",
-    "class TransformerDecoderLayer(nn.Module):\n",
-    "    def __init__(self, size, dropout, self_attn, \n",
-    "                 src_attn, feed_forward):\n",
-    "        super(TransformerDecoderLayer, self).__init__()\n",
-    "        self.self_attn = self_attn\n",
-    "        self.context_attn = src_attn\n",
-    "        self.feed_forward = feed_forward\n",
-    "        self.sublayer = clones(SublayerWrap(size, dropout), 2)\n",
-    " \n",
-    "#        mask = self._get_attn_subsequent_mask(MAX_SIZE)\n",
-    "#         self.register_buffer('mask', mask)\n",
-    " \n",
-    "    def forward(self, inputs, memory, src_mask, tgt_mask):\n",
-    "#                 src_pad_mask, tgt_pad_mask):\n",
-    "#         dec_mask = torch.gt(tgt_pad_mask +\n",
-    "#                             self.mask[:, :tgt_pad_mask.size(1),\n",
-    "#                                       :tgt_pad_mask.size(1)], 0)\n",
-    "        # Sublayer 1\n",
-    "        def sublayer1(x):\n",
-    "            return self.self_attn(x, x, x, mask=dec_mask)\n",
-    "\n",
-    "        # Sublayer 2\n",
-    "        def sublayer2(x):\n",
-    "            return self.context_attn(memory, \n",
-    "                                     memory, \n",
-    "                                     x,\n",
-    "                                     mask=src_pad_mask)\n",
-    "\n",
-    "        # Sublayer 3\n",
-    "        def sublayer3(x):\n",
-    "            return  self.feed_forward(mid_norm)\n",
-    "\n",
-    "        self_context = self.sublayer[0](x, sublayer1)\n",
-    "        context = self.sublayer[1](x, sublayer2)\n",
-    "        return self.sublayer[2](x, sublayer3), memory, src_mask, tgt_mask\n",
-    "\n",
-    "#     def _get_attn_subsequent_mask(self, size):\n",
-    "#         ''' Get an attention mask to avoid using the subsequent info.'''\n",
-    "#         attn_shape = (1, size, size)\n",
-    "#         subsequent_mask = np.triu(np.ones(attn_shape), k=1).astype('uint8')\n",
-    "#         subsequent_mask = torch.from_numpy(subsequent_mask)\n",
-    "#         return subsequent_mask"
+    "def subsequent_mask(self, size):\n",
+    "    attn_shape = (1, size, size)\n",
+    "    subsequent_mask = np.triu(np.ones(attn_shape), k=1).astype('uint8')\n",
+    "    subsequent_mask = torch.from_numpy(subsequent_mask)\n",
+    "    return subsequent_mask"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -270,61 +253,43 @@
     "            .expand(tgt_batch, tgt_len, tgt_len)\n",
     "        for layer in self.layers:\n",
     "            out = layer(out, memory, src_mask, tgt_mask)\n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "# class TransformerDecoder(nn.Module):\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class TransformerDecoderLayer(nn.Module):\n",
+    "    def __init__(self, size, dropout, self_attn, \n",
+    "                 src_attn, feed_forward):\n",
+    "        super(TransformerDecoderLayer, self).__init__()\n",
+    "        self.self_attn = self_attn\n",
+    "        self.context_attn = src_attn\n",
+    "        self.feed_forward = feed_forward\n",
+    "        self.sublayer = clones(SublayerWrap(size, dropout), 2)\n",
     " \n",
-    "#     def __init__(self, num_layers, hidden_size, attn_type,\n",
-    "#                  copy_attn, dropout, embeddings):\n",
-    "#         super(TransformerDecoder, self).__init__()\n",
-    "#         self.num_layers = num_layers\n",
+    "    def forward(self, inputs, memory, src_mask, tgt_mask):\n",
+    "        def sublayer1(x):\n",
+    "            return self.self_attn(x, x, x, mask=tgt_mask)\n",
     "\n",
-    "#         # Build TransformerDecoder.\n",
-    "#         self.transformer_layers = nn.ModuleList(\n",
-    "#             [TransformerDecoderLayer(hidden_size, dropout)\n",
-    "#              for _ in range(num_layers)])\n",
-    "#         self.layer_norm = onmt.modules.LayerNorm(hidden_size)\n",
+    "        def sublayer2(x):\n",
+    "            return self.context_attn(memory, \n",
+    "                                     memory, \n",
+    "                                     x,\n",
+    "                                     mask=src_mask)\n",
     "\n",
-    "#     def forward(self, tgt, memory_bank, state, memory_lengths=None):\n",
-    "#         # Initialize return variables.\n",
-    "#         outputs = []\n",
+    "        def sublayer3(x):\n",
+    "            return  self.feed_forward(mid_norm)\n",
     "\n",
-    "#         # Run the forward pass of the TransformerDecoder.\n",
-    "#         emb = self.embeddings(tgt)\n",
-    "#         if state.previous_input is not None:\n",
-    "#             emb = emb[state.previous_input.size(0):, ]\n",
-    "\n",
-    "#         output = emb.transpose(0, 1).contiguous()\n",
-    "#         src_memory_bank = memory_bank.transpose(0, 1).contiguous()\n",
-    "\n",
-    "#         padding_idx = self.embeddings.word_padding_idx\n",
-    "#         src_pad_mask = src_words.data.eq(padding_idx).unsqueeze(1) \\\n",
-    "#             .expand(src_batch, tgt_len, src_len)\n",
-    "#         tgt_pad_mask = tgt_words.data.eq(padding_idx).unsqueeze(1) \\\n",
-    "#             .expand(tgt_batch, tgt_len, tgt_len)\n",
-    "\n",
-    "#         saved_inputs = []\n",
-    "#         for i in range(self.num_layers):\n",
-    "#             prev_layer_input = None\n",
-    "#             if state.previous_input is not None:\n",
-    "#                 prev_layer_input = state.previous_layer_inputs[i]\n",
-    "#             output, attn, all_input \\\n",
-    "#                 = self.transformer_layers[i](output, src_memory_bank,\n",
-    "#                                              src_pad_mask, tgt_pad_mask,\n",
-    "#                                              previous_input=prev_layer_input)\n",
-    "#             saved_inputs.append(all_input)\n",
-    "\n",
-    "#         saved_inputs = torch.stack(saved_inputs)\n",
-    "#         output = self.layer_norm(output)\n",
-    "\n",
-    "#         # Process the result and update the attentions.\n",
-    "#         outputs = output.transpose(0, 1).contiguous()\n",
-    "#         attn = attn.transpose(0, 1).contiguous()\n",
-    "#         return outputs\n",
-    "\n",
-    "#     def init_decoder_state(self, src, memory_bank, enc_hidden):\n",
-    "#         return TransformerDecoderState(src)\n"
+    "        self_context = self.sublayer[0](x, sublayer1)\n",
+    "        context = self.sublayer[1](x, sublayer2)\n",
+    "        return self.sublayer[2](x, sublayer3)\n",
+    "\n"
    ]
   },
   {
@@ -357,13 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Dot Product Attention\n",
     "class DotProductAttention(nn.Module):\n",
     "    def __init__(self, dropout):\n",
     "        self.dropout = nn.Dropout(dropout)\n",
@@ -371,10 +335,9 @@
     "    def forward(self, key, value, query, mask=None):\n",
     "        scores = torch.matmul(query, key.transpose(-2, -1))\n",
     "        if mask is not None:\n",
-    "            scores = scores.masked_fill(Variable(mask), -1e18)\n",
+    "            scores = scores.masked_fill(Variable(mask), -1e9)\n",
     "        attn = self.dropout(F.softmax(scores, dim = -1))\n",
-    "        return torch.matmul(attn, value)\n",
-    "        #context = unshape(torch.matmul(drop_attn, value_up))"
+    "        return torch.matmul(attn, value)"
    ]
   },
   {
@@ -408,22 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Multiheaded Attention\n",
     "class MultiHeadedAttention(nn.Module):\n",
     "    def __init__(self, head_count, model_dim, dropout=0.1):\n",
+    "        super(MultiHeadedAttention, self).__init__()\n",
     "        assert model_dim % head_count == 0\n",
     "        self.dim_per_head = model_dim // head_count\n",
     "        self.head_count = head_count\n",
-    "        super(MultiHeadedAttention, self).__init__()\n",
     "        self.linears = clones(nn.Linear(size, size), 4)\n",
     "        self.attn = DotProductAttention(dropout)\n",
-    "        self.final_linear = nn.Linear(model_dim, model_dim)\n",
     "\n",
     "    def forward(self, key, value, query, mask=None):\n",
     "        batch = key.size(0)\n",
@@ -470,13 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Position-wise feed forward.\n",
     "class PositionwiseFeedForward(nn.Module):\n",
     "    def __init__(self, size, hidden_size, dropout=0.1):\n",
     "        super(PositionwiseFeedForward, self).__init__()\n",
@@ -682,8 +642,7 @@
     "def rate(step, model_size, factor, warmup):\n",
     "    return factor * \\\n",
     "        (model_size ** (-0.5) *\n",
-    "        min(step ** (-0.5),\n",
-    "            step * warmup_steps**(-1.5)))"
+    "        min(step ** (-0.5), step * warmup_steps**(-1.5)))"
    ]
   },
   {
@@ -720,10 +679,6 @@
     }
    ],
    "source": [
-    "# Dropout\n",
-    "\n",
-    "\n",
-    "# Loss \n",
     "class LabelSmoothing(nn.Criterion):\n",
     "    def __init__(self, generator, tgt_vocab, normalization=\"sents\",\n",
     "                 label_smoothing=0.0):\n",
